--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ monitor_speed = 115200
 lib_deps =
   https://github.com/vshymanskyy/TinyGSM.git
   knolleary/PubSubClient
-
+  StreamDebugger @ 1.0.1
